--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
